Summary of important user-visible changes for general 1.3.1:
-------------------------------------------------------------------

 ** general 1.3.1 is a bug fix release

 ** The `addSwitch' method from inputParser class has been fixed

 ** For Matlab compatibility, optional arguments of the inputParser class
    will be skipped and followed by ParamValue and Switch arguments if they
    are a string that does not validate. Note that unlike Matlab, if no
    validator is given, anything is valid, so giving no validator to an
    Optional argument will not turn any string on the list of arguments
    to be considered a ParamValue key.

Summary of important user-visible changes for general 1.3.0:
-------------------------------------------------------------------

 ** The following functions are new:
      majle

 ** The class `inputParser' class has been implemented with many methods. It
    attempts to be as compatible with Matlab as possible. However, since
    classdef is not yet implemented the syntax differs slightly. Unlike the
    Matlab implementation, this functions return the object. For example:

        obj.method (arguments)        # matlab implementation
        obj = obj.method (arguments)  # octave implementation

    The octave implementatino expands on the Matlab one as it has one more type
    of API, see `help @inputParser/addSwitch'.

 ** The function `unvech' accepts a new argument scale to calculate
    the upper triangular part of the matrix thus returning non-symmetric
    matrix.

 ** The function `parcellfun' had the random number generator modifed,
    a new option to set the verbosity level, and other bugs corrected.

 ** Package is no longer automatically loaded.