@@ -1,3 +1,9 @@
+Summary of important user-visible changes for general 1.3.2:
+-------------------------------------------------------------------
+
+ ** The following functions are new:
+      tablify
+
 Summary of important user-visible changes for general 1.3.1:
 -------------------------------------------------------------------
 
